# nano-devops-platform

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .yamllint.yml  GHOST_AI_FIX_REPORT.md  HDTV_DEMO_GUIDE.md  HDTV_DEMO_RUNBOOK.md  KE_HOACH_DEMO_HDTV_AI.md  PLATFORM_USER_GUIDE.md  PROMPT_TEMPLATE.md  README.md  README_GHOST_AI.md  Vagrantfile  alembic.ini  cli.sh  docs-root-context.md  final_ai_context.md  get_context_from_both_of_folder.sh  guide-CI-CD.md  guide-ci-cd.md  guide-test-ansible.txt  package-lock.json  react_agent_full.txt  ssh.txt  test-env-interpolation.sh  verify-t56.ps1
project_devops/apps/teencare/: AGENTS.md  API_TEST_GUIDE.md  Dockerfile  README.md  TEENCARE_PRESENTATION.md  pyproject.toml  requirements.txt  teencare_postman_collection.json
project_devops/apps/teencare/.cursor/rules/: teencare-parent-copilot.mdc
project_devops/apps/teencare/docs/: 00-overview.md  01-architecture.md  02-api-contract.md  03-data-model.md  04-llm-contract.md  05-validation-guardrails.md  06-evaluation.md  07-runbook.md  08-security-privacy.md  09-dev-setup-windows.md  10-mvp-how-to-run.md  11-mvp-implementation-notes.md  todos.md
project_devops/apps/teencare/docs/adr/: ADR-0001-single-llm-call-and-validation.md
project_devops/apps/teencare/lms_api/: .env.example  Dockerfile  requirements.txt
project_devops/apps/teencare/lms_api/app/: db.py  (+5 more)
project_devops/apps/teencare/lms_web/: Dockerfile  index.html  package.json
project_devops/apps/teencare/scripts/: lms_docker_down.sh  lms_docker_up.sh  local_dashboard.py  mentor_dashboard.py  run_demo.ps1
(+890 files in other folders)
